--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- 
-  Mau custom web ucapan online? Order di Dika Tutorial aja!
-  Youtube: Deka Tutorial
-  Tiktok: @deka_tutorial
-  Instagram: @deka_tutorial
-  -->
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -27,24 +22,24 @@
     <div class="ucapan">
 
       <p>Klik aku</p>
-      <p>Ucapan 1</p>
-      <p>Ucapan 2</p>
-      <p>Ucapan 3</p>
-      <p>Ucapan 4</p>
-      <p>Ucapan 5</p>
+      <p>Ciyeee</p>
+      <p>Udah nambah umur aja hehe</p>
+      <p>Selamat ulang tahun yaa</p>
+      <p>Semoga panjang umur</p>
+      <p>Sehat selalu</p>
+      <p>Bahagia selalu</p>
+      <p>Mmuachh</p>
 
     </div>
     <script>
 
-      musik = "NamaFileMusik.mp3";
-      foto = "NamaFoto.jpg";
-      txtFoto = "I Love You";
+      musik = "musik.mp3";
+      foto = "foto.jpg";
+      txtFoto = "I Love You Sayang";
       nomorWA = "";
 
       stiker = "";
 
-// Yang mau tanpa wm, custom tampilan, bisa order web ucapan di Deka Tutorial (DM IG @deka_tutorial)
-// ======================================
     </script>
     <div class="content"></div>
     <div class="panda">
@@ -69,11 +64,10 @@
       </div>
     </div>
     <script>
-      // Jangan hapus kode dibawah ini!
       musik = new Audio(musik);
       musik.loop = true;
       musik.autoplay = true;
-      watermark("Youtube : Deka Tutorial");
+      watermark("FRZL");
       ucapan();
       buatLope();
       makan();
