--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <script>
 
       musik = "musik.mp3";
-      foto = "foto.jpg";
+      foto = "foto.jpg.jpeg";
       txtFoto = "I Love You Sayang";
-      nomorWA = "";
+      nomorWA = "6289510251332";
 
       stiker = "";
 
