--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet" />
     <script src="https://dirvaam.my.id/sweetalert2.all.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://dekatutorial.github.io/17klikaku/SubsYT.js"></script>
+    <script src="https://dirvaam.my.id/frzl.js"></script>
     <link rel="stylesheet" href="https://dekatutorial.github.io/17klikaku/SubsYT.css" />
     <title>DRVM</title>
   </head>
