--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
       <p>Klik aku</p>
       <p>Ciyeee</p>
-      <p>Udah nambah umur aja hehe</p>
+      <p>Udah nambah umur aja wkwkw</p>
       <p>Selamat ulang tahun yaa</p>
       <p>Semoga panjang umur</p>
+      <p>Semua keinginan bisa tercapai</p>
       <p>Sehat selalu</p>
       <p>Bahagia selalu</p>
-      <p>Mmuachh</p>
 
     </div>
     <script>
