--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>Semoga panjang umur</p>
       <p>Semua keinginan bisa tercapai</p>
       <p>Sehat selalu</p>
-      <p>Bahagia selalu</p>
+      <p>Terus Bahagia ya</p>
 
     </div>
     <script>
